# spotify-dj

./: .env.example  .gitignore  .venv  AGENTS.md  CURRENT.md  README.md  config.py  conversation.py  debug_writer.py  llm_client.py  main.py  monitor.py  pyproject.toml  queue_manager.py  queue_sync.py  requirements.txt  spotify_client.py  test_conversation.py  test_jit_queue.py  test_llm_client.py  test_llm_extraction.py  test_queue_sync.py  test_spotify_client.py
.beads/: issues.jsonl
.sisyphus/: boulder.json
.sisyphus/drafts/: queue-debug-dump-system.md
.sisyphus/notepads/: architecture-overview.md
.sisyphus/notepads/cli-debug-dashboard/: learnings.md
.sisyphus/plans/: cli-debug-dashboard.md
docs/plans/: 2026-01-16-spotify-dj-implementation.md
src/spotify_dj/: __init__.py  config.py  llm_client.py  monitor.py  queue_manager.py  queue_sync.py  spotify_client.py
